--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
   },
   "devDependencies": {
     "babel-preset-expo": "^5.0.0",
+    "eslint": "^5.12.0",
+    "eslint-config-google": "^0.11.0",
     "jest-expo": "^31.0.0"
   },
   "private": true
