--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "babel-preset-expo": "^5.0.0",
     "eslint": "^5.12.0",
     "eslint-config-google": "^0.11.0",
-    "jest-expo": "^31.0.0"
+    "jest-expo": "^31.0.0",
+    "react-native-swiper": "^1.5.14"
   },
   "private": true
 }
