--- a/app.json
+++ b/app.json
@@ -25,6 +25,12 @@
     "ios": {
       "supportsTablet": true
     },
+    "ios": {
+      "bundleIdentifier": "com.yourcompany.yourappname"
+    },
+    "android": {
+      "package": "org.survivingme.survivingme"
+    },
     "description": ""
   }
 }
